--- a/notebook_1_covid19/Visualizing_Time_Series_Dataset_COVID_19_Data.ipynb
+++ b/notebook_1_covid19/Visualizing_Time_Series_Dataset_COVID_19_Data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKR5caUgL/0bm9GGk+FJOi",
+      "authorship_tag": "ABX9TyOERQf+HQlin9QbIf2UOkVm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,31 +45,236 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import HTML\n",
+        "\n",
+        "# Force Colab markdown cells to use full width\n",
+        "HTML('''\n",
+        "<style>\n",
+        "    .container { width:100% !important; }\n",
+        "    .cell { width:100% !important; }\n",
+        "    .text_cell_render { max-width: 100% !important; }\n",
+        "</style>\n",
+        "''')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "8TOKoZfKB1vM",
+        "outputId": "9de61420-ba71-48e1-8bd5-40b9666937e4"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "    .container { width:100% !important; }\n",
+              "    .cell { width:100% !important; }\n",
+              "    .text_cell_render { max-width: 100% !important; }\n",
+              "</style>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Welcome students"
+        "# Notebook: 1"
+      ],
+      "metadata": {
+        "id": "5e3-HPgG9CRi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "👋 Welcome students!\n",
+        "\n",
+        "In this journey, we’re going to take a dataset and slowly uncover the story it tells through visualization. Numbers by themselves can feel cold and endless, but once we turn them into visuals, they begin to speak.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "XJOgqBl-xm8z"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "##📖 Introduction\n",
+        "\n",
+        "When the COVID-19 pandemic began, the world was flooded with numbers — daily cases, recoveries, deaths, and later vaccinations. Looking at endless tables of figures wasn’t just boring, it was confusing.\n",
+        "\n",
+        "But the moment those numbers were drawn into curves, bars, and maps, they started to make sense. Suddenly, we could see when cases were rising, where outbreaks were spreading, and how vaccinations were helping. The data wasn’t just numbers anymore — it was a story of how the world was coping.\n",
+        "\n",
+        "That’s the real power of visualization. It’s not about making charts look pretty — it’s about making data human, so that anyone, not just experts, can understand what’s happening.\n",
+        "\n",
+        "In this notebook, we’ll take COVID-19 data and learn step by step how to explore and visualize it using Python. Some of the code will be ready for you, while some parts will be left for you to try on your own. By the end, you’ll see how visualization can transform raw data into meaningful insights — and how those insights help us understand events that shape our lives."
+      ],
       "metadata": {
-        "id": "iiYXgQDqsVua"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "ytPR7yqD9PQc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 📝 Before We Dive In...\n",
+        "\n",
+        "Before we start digging deep into the dataset, let’s pause for a moment and reflect.  \n",
+        "Here are a couple of questions for you to think about (and maybe discuss!):\n",
+        "\n",
+        "1. **What do you understand by *Time-Series Data*?**  \n",
+        "   *(Hint: Think about data that is recorded over time — like daily COVID-19 cases.)*\n",
+        "\n",
+        "2. **Do you think choosing Python as our programming language for this analysis is a good decision?**  \n",
+        "   Feel free to share your honest opinion — there’s no right or wrong answer here!  \n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "vGtAXGca-Vet"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ⚙️ Setting Things Up\n",
+        "\n",
+        "Before we begin our analysis, we need to make sure we have the right tools.  \n",
+        "In the next coding cell, we’ll install and import the required Python packages that will help us explore and visualize the COVID-19 dataset.  \n"
+      ],
+      "metadata": {
+        "id": "QLZJcVKxAHZs"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np"
+      ],
       "metadata": {
-        "id": "ISLBRfn4mPdO"
+        "id": "iiYXgQDqsVua"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "\n",
+        "## 📂 Loading Our Dataset\n",
+        "\n",
+        "Now that our setup is ready, it’s time to bring in the data we’ll be working with.  \n",
+        "In the next coding cell, we’ll load the COVID-19 dataset directly from **Google Drive** (shared with public view access).  \n",
+        "\n",
+        "Once the file is loaded, we’ll **print the first few rows** so that we can get a quick look at what the dataset contains before moving into analysis and visualization.  \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "z8SZENlKETX6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Replace with your Google Drive file ID which has public view access\n",
+        "file_id = \"13A72xHYeyaiaRmIl6_4zBxhhyZIv5InP\"\n",
+        "\n",
+        "# Construct the download URL\n",
+        "url = f\"https://drive.google.com/uc?export=download&id={file_id}\"\n",
+        "\n",
+        "# Read CSV directly into pandas\n",
+        "df = pd.read_csv(url)\n",
+        "\n",
+        "# Show first few rows\n",
+        "print(df.head())"
+      ],
+      "metadata": {
+        "id": "ISLBRfn4mPdO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "63fafef2-1d11-4cc9-9442-6caeeb0c7196"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Country/Region  Confirmed  Deaths  Recovered  Active  New cases  New deaths  \\\n",
+            "0    Afghanistan      36263    1269      25198    9796        106          10   \n",
+            "1        Albania       4880     144       2745    1991        117           6   \n",
+            "2        Algeria      27973    1163      18837    7973        616           8   \n",
+            "3        Andorra        907      52        803      52         10           0   \n",
+            "4         Angola        950      41        242     667         18           1   \n",
+            "\n",
+            "   New recovered  Deaths / 100 Cases  Recovered / 100 Cases  \\\n",
+            "0             18                3.50                  69.49   \n",
+            "1             63                2.95                  56.25   \n",
+            "2            749                4.16                  67.34   \n",
+            "3              0                5.73                  88.53   \n",
+            "4              0                4.32                  25.47   \n",
+            "\n",
+            "   Deaths / 100 Recovered  Confirmed last week  1 week change  \\\n",
+            "0                    5.04                35526            737   \n",
+            "1                    5.25                 4171            709   \n",
+            "2                    6.17                23691           4282   \n",
+            "3                    6.48                  884             23   \n",
+            "4                   16.94                  749            201   \n",
+            "\n",
+            "   1 week % increase             WHO Region  \n",
+            "0               2.07  Eastern Mediterranean  \n",
+            "1              17.00                 Europe  \n",
+            "2              18.07                 Africa  \n",
+            "3               2.60                 Europe  \n",
+            "4              26.84                 Africa  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "---\n",
+        "\n",
+        "## 🖥️ Task: Load Data from Your Local System\n",
+        "\n",
+        "Sometimes, instead of pulling data from an online source, we may need to work with a file saved on our own computer.  \n",
+        "\n",
+        "👉 In the next coding cell, **your task** is to write the code to upload and load the dataset from your **local system** into the notebook.  \n",
+        "\n",
+        "*Hint:* You can use Colab’s built-in file upload utility (`files.upload()`) from `google.colab`.\n",
+        "\n",
+        "***You will find the dataset in `data` folder inside the root folder of your notebook.*\n",
+        "\n",
+        "***For source refer to the `README` file in the root of yur notebook*\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "HmBHmTn5FD3T"
+      }
     },
     {
       "cell_type": "code",
@@ -81,13 +286,93 @@
       "source": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 🧹 Data Cleaning  \n",
+        "\n",
+        "In this step, we will clean our dataset to make it ready for analysis.  \n",
+        "1. First, we will check if the dataset contains any **infinite values (`inf` or `-inf`)**, and replace them with `NaN` as well.      \n",
+        "2. We will also check for **missing values** in the dataset.\n",
+        "\n",
+        "This ensures that our dataset does not contain problematic values that could affect further analysis.\n"
+      ],
+      "metadata": {
+        "id": "sMegvy_hGKBb"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Replacing inf or -inf with nan\n",
+        "df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+        "\n",
+        "# Check for missing values and after replacment don above\n",
+        "print(\"Missing values before cleaning:\")\n",
+        "print(df.isnull().sum())\n",
+        "\n"
+      ],
       "metadata": {
         "id": "reA_n3gnudTi"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Task:\n",
+        "What if we wanted to replace all the missing values (`NaN`) with `0`?"
+      ],
+      "metadata": {
+        "id": "WqmshdOtOlZ6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Cccev7DiPBW4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Task:\n",
+        "What if we wanted to drop all the rows having atleast a cell empty after cleaning?"
+      ],
+      "metadata": {
+        "id": "gTSYJnZTPDHW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fASSrkjPPEkq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "7BMvHAtbPn4i"
+      }
     }
   ]
 }
