--- a/notebook_1_covid19_TS/Visualizing_Time_Series_Dataset_COVID_19_Data_V2.ipynb
+++ b/notebook_1_covid19_TS/Visualizing_Time_Series_Dataset_COVID_19_Data_V2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIDZETfbs+Eblz9TWxBJzF",
+      "authorship_tag": "ABX9TyMGAZcHwOiyl33EZtPCfKMV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "iiYXgQDqsVua"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -234,7 +234,7 @@
       "metadata": {
         "id": "d7IycXkudc-N"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +283,7 @@
         "id": "bUAUXkwre5b-",
         "outputId": "662d0571-b5ed-4f16-b12a-d217fc1f9bd6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +400,7 @@
         "id": "dfbGt0fPd1mM",
         "outputId": "5561d7ef-b633-4ffd-fd4f-db647abd3313"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -413,6 +413,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Note:** On the y-axis, `1e6` means **1 million (1,000,000)** and `1e8` means **100 million (100,000,000)**.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2gk0_ib8D0wQ"
+      }
     },
     {
       "cell_type": "markdown",
@@ -524,12 +537,7 @@
         "  # Print insights\n",
         "  max_quarter = quarterly_data.loc[quarterly_data['New_cases'].idxmax(), 'Quarter_str']\n",
         "  max_cases = quarterly_data['New_cases'].max()\n",
-        "\n",
-        "  # print(\"📊 What this timeline reveals:\")\n",
-        "  # print(f\"• Peak quarter was {max_quarter} with {max_cases:,} new cases\")\n",
-        "  # print(\"• Red portions show the tragic human cost (deaths)\")\n",
-        "  # print(\"• You can see how deaths are proportional to cases\")\n",
-        "  # print(\"• Each bar represents millions of lives affected worldwide\")\n"
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -539,7 +547,7 @@
         "id": "iBYycnfYwyAD",
         "outputId": "c6bab787-4bac-4c94-8043-1e4093b0e315"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -682,12 +690,45 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Note:** On the y-axis, `1e6` means **1 million (1,000,000)** and `1e8` means **100 million (100,000,000)**.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "dQpUBtlYEkG6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Task\n",
+        "\n",
+        "Convert the above chart to double bar chart with the same data"
+      ],
+      "metadata": {
+        "id": "zrj1sFpeyhsj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "klst3a-bE3h2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Task\n",
         "\n",
         "Construct a pie chart which Shows just top 10 countries mostly affected by COVID-19 ( by cummulative deaths)"
       ],
       "metadata": {
-        "id": "zrj1sFpeyhsj"
+        "id": "UhJJ0hh-Ewou"
       }
     },
     {
@@ -740,7 +781,7 @@
         "            linewidths=0.5,\n",
         "            linecolor='white')\n",
         "\n",
-        "plt.title('🔥 Global COVID-19 Intensity Map: When and Where the World Burned',\n",
+        "plt.title('Global COVID-19 Intensity Map: When and Where the World Burned',\n",
         "    fontsize=16, fontweight='bold', pad=20)\n",
         "plt.xlabel('Month-Year', fontsize=12)\n",
         "plt.ylabel('WHO Region', fontsize=12)\n",
@@ -762,7 +803,7 @@
         "id": "ajUTZcn13Wza",
         "outputId": "309c84b0-889c-4095-85a4-c38da3c41d11"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -934,7 +975,7 @@
           "height": 1000
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
